Protection against PXL segfault with image data without colorspace info, Bug 695103

Someghow since gs 9.10, it becomes possible for image data to arrive
without colorspace info, and accessing such causes segfault; we should
protect against it in any case, but further investigation (possibly
by somebody else) is needed on how that happened. Part 1 of the fix.

Cluster tested. No difference expected.

Signed-off-by: Hin-Tak Leung <hintak@ghostscript.com>